// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inside file deeply 1`] = `
[
  {
    "end": 20010,
    "score": 18,
    "start": 20009,
  },
  {
    "end": 20011,
    "score": 19,
    "start": 20010,
  },
  {
    "end": 20012,
    "score": 18,
    "start": 20011,
  },
  {
    "end": 20013,
    "score": 17,
    "start": 20012,
  },
  {
    "end": 20014,
    "score": 17,
    "start": 20013,
  },
  {
    "end": 20015,
    "score": 16,
    "start": 20014,
  },
  {
    "end": 20016,
    "score": 16,
    "start": 20015,
  },
  {
    "end": 20017,
    "score": 18,
    "start": 20016,
  },
  {
    "end": 20018,
    "score": 17,
    "start": 20017,
  },
  {
    "end": 20019,
    "score": 17,
    "start": 20018,
  },
]
`;

exports[`loads a larger bigwig file at different scales 1`] = `
[
  {
    "end": 2068352,
    "maxScore": 1,
    "minScore": 0,
    "score": 0.004236222847948511,
    "start": 1988800,
    "summary": true,
  },
  {
    "end": 2147904,
    "maxScore": 9,
    "minScore": 0,
    "score": 0.12218423169750603,
    "start": 2068352,
    "summary": true,
  },
]
`;

exports[`loads a larger bigwig file at different scales 2`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 3`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 4`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads a larger bigwig file at different scales 5`] = `
[
  {
    "end": 2073477,
    "score": 0,
    "start": 2069069,
  },
  {
    "end": 2073485,
    "score": 1,
    "start": 2073477,
  },
  {
    "end": 2073564,
    "score": 2,
    "start": 2073485,
  },
  {
    "end": 2076947,
    "score": 0,
    "start": 2073564,
  },
  {
    "end": 2076956,
    "score": 1,
    "start": 2076947,
  },
  {
    "end": 2077030,
    "score": 2,
    "start": 2076956,
  },
  {
    "end": 2077034,
    "score": 1,
    "start": 2077030,
  },
  {
    "end": 2077775,
    "score": 0,
    "start": 2077034,
  },
  {
    "end": 2077844,
    "score": 1,
    "start": 2077775,
  },
  {
    "end": 2080490,
    "score": 0,
    "start": 2077844,
  },
]
`;

exports[`loads bedgraph bigwig file 1`] = `
[
  {
    "end": 3,
    "score": 1,
    "start": 2,
  },
  {
    "end": 4,
    "score": 1,
    "start": 3,
  },
  {
    "end": 5,
    "score": 1,
    "start": 4,
  },
  {
    "end": 6,
    "score": 1,
    "start": 5,
  },
  {
    "end": 7,
    "score": 1,
    "start": 6,
  },
  {
    "end": 8,
    "score": 2,
    "start": 7,
  },
  {
    "end": 9,
    "score": 2,
    "start": 8,
  },
  {
    "end": 10,
    "score": 2,
    "start": 9,
  },
  {
    "end": 11,
    "score": 2,
    "start": 10,
  },
  {
    "end": 12,
    "score": 2,
    "start": 11,
  },
  {
    "end": 13,
    "score": 2,
    "start": 12,
  },
  {
    "end": 14,
    "score": 2,
    "start": 13,
  },
  {
    "end": 15,
    "score": 2,
    "start": 14,
  },
  {
    "end": 16,
    "score": 3,
    "start": 15,
  },
  {
    "end": 17,
    "score": 4,
    "start": 16,
  },
  {
    "end": 18,
    "score": 5,
    "start": 17,
  },
  {
    "end": 19,
    "score": 5,
    "start": 18,
  },
  {
    "end": 20,
    "score": 5,
    "start": 19,
  },
  {
    "end": 21,
    "score": 5,
    "start": 20,
  },
  {
    "end": 22,
    "score": 5,
    "start": 21,
  },
  {
    "end": 23,
    "score": 5,
    "start": 22,
  },
  {
    "end": 24,
    "score": 5,
    "start": 23,
  },
  {
    "end": 25,
    "score": 5,
    "start": 24,
  },
  {
    "end": 26,
    "score": 5,
    "start": 25,
  },
  {
    "end": 27,
    "score": 5,
    "start": 26,
  },
  {
    "end": 28,
    "score": 5,
    "start": 27,
  },
  {
    "end": 29,
    "score": 5,
    "start": 28,
  },
  {
    "end": 30,
    "score": 5,
    "start": 29,
  },
  {
    "end": 31,
    "score": 5,
    "start": 30,
  },
  {
    "end": 32,
    "score": 5,
    "start": 31,
  },
  {
    "end": 33,
    "score": 5,
    "start": 32,
  },
  {
    "end": 34,
    "score": 5,
    "start": 33,
  },
  {
    "end": 35,
    "score": 5,
    "start": 34,
  },
  {
    "end": 36,
    "score": 5,
    "start": 35,
  },
  {
    "end": 37,
    "score": 5,
    "start": 36,
  },
  {
    "end": 38,
    "score": 5,
    "start": 37,
  },
  {
    "end": 39,
    "score": 5,
    "start": 38,
  },
  {
    "end": 40,
    "score": 5,
    "start": 39,
  },
  {
    "end": 41,
    "score": 5,
    "start": 40,
  },
  {
    "end": 42,
    "score": 5,
    "start": 41,
  },
  {
    "end": 43,
    "score": 6,
    "start": 42,
  },
  {
    "end": 44,
    "score": 7,
    "start": 43,
  },
  {
    "end": 45,
    "score": 7,
    "start": 44,
  },
  {
    "end": 46,
    "score": 7,
    "start": 45,
  },
  {
    "end": 47,
    "score": 7,
    "start": 46,
  },
  {
    "end": 48,
    "score": 8,
    "start": 47,
  },
  {
    "end": 49,
    "score": 8,
    "start": 48,
  },
  {
    "end": 50,
    "score": 8,
    "start": 49,
  },
  {
    "end": 51,
    "score": 8,
    "start": 50,
  },
  {
    "end": 52,
    "score": 8,
    "start": 51,
  },
  {
    "end": 53,
    "score": 8,
    "start": 52,
  },
  {
    "end": 54,
    "score": 8,
    "start": 53,
  },
  {
    "end": 55,
    "score": 8,
    "start": 54,
  },
  {
    "end": 56,
    "score": 9,
    "start": 55,
  },
  {
    "end": 57,
    "score": 9,
    "start": 56,
  },
  {
    "end": 58,
    "score": 9,
    "start": 57,
  },
  {
    "end": 59,
    "score": 9,
    "start": 58,
  },
  {
    "end": 60,
    "score": 9,
    "start": 59,
  },
  {
    "end": 61,
    "score": 9,
    "start": 60,
  },
  {
    "end": 62,
    "score": 9,
    "start": 61,
  },
  {
    "end": 63,
    "score": 9,
    "start": 62,
  },
  {
    "end": 64,
    "score": 9,
    "start": 63,
  },
  {
    "end": 65,
    "score": 9,
    "start": 64,
  },
  {
    "end": 66,
    "score": 10,
    "start": 65,
  },
  {
    "end": 67,
    "score": 10,
    "start": 66,
  },
  {
    "end": 68,
    "score": 10,
    "start": 67,
  },
  {
    "end": 69,
    "score": 10,
    "start": 68,
  },
  {
    "end": 70,
    "score": 10,
    "start": 69,
  },
  {
    "end": 71,
    "score": 10,
    "start": 70,
  },
  {
    "end": 72,
    "score": 10,
    "start": 71,
  },
  {
    "end": 73,
    "score": 10,
    "start": 72,
  },
  {
    "end": 74,
    "score": 10,
    "start": 73,
  },
  {
    "end": 75,
    "score": 10,
    "start": 74,
  },
  {
    "end": 76,
    "score": 10,
    "start": 75,
  },
  {
    "end": 77,
    "score": 11,
    "start": 76,
  },
  {
    "end": 78,
    "score": 11,
    "start": 77,
  },
  {
    "end": 79,
    "score": 11,
    "start": 78,
  },
  {
    "end": 80,
    "score": 11,
    "start": 79,
  },
  {
    "end": 81,
    "score": 11,
    "start": 80,
  },
  {
    "end": 82,
    "score": 11,
    "start": 81,
  },
  {
    "end": 83,
    "score": 11,
    "start": 82,
  },
  {
    "end": 84,
    "score": 11,
    "start": 83,
  },
  {
    "end": 85,
    "score": 11,
    "start": 84,
  },
  {
    "end": 86,
    "score": 11,
    "start": 85,
  },
  {
    "end": 87,
    "score": 11,
    "start": 86,
  },
  {
    "end": 88,
    "score": 11,
    "start": 87,
  },
  {
    "end": 89,
    "score": 11,
    "start": 88,
  },
  {
    "end": 90,
    "score": 11,
    "start": 89,
  },
  {
    "end": 91,
    "score": 12,
    "start": 90,
  },
  {
    "end": 92,
    "score": 12,
    "start": 91,
  },
  {
    "end": 93,
    "score": 12,
    "start": 92,
  },
  {
    "end": 94,
    "score": 12,
    "start": 93,
  },
  {
    "end": 95,
    "score": 13,
    "start": 94,
  },
  {
    "end": 96,
    "score": 13,
    "start": 95,
  },
  {
    "end": 97,
    "score": 13,
    "start": 96,
  },
  {
    "end": 98,
    "score": 13,
    "start": 97,
  },
  {
    "end": 99,
    "score": 13,
    "start": 98,
  },
  {
    "end": 100,
    "score": 13,
    "start": 99,
  },
]
`;

exports[`loads bedgraph bigwig file 2`] = `
[
  {
    "end": 162,
    "maxScore": 13,
    "minScore": 1,
    "score": 9.0125,
    "start": 2,
    "summary": true,
  },
]
`;

exports[`loads bedgraph bigwig file 3`] = `
[
  {
    "end": 642,
    "maxScore": 24,
    "minScore": 1,
    "score": 9.746875,
    "start": 2,
    "summary": true,
  },
]
`;

exports[`loads bedgraph bigwig file 4`] = `
[
  {
    "end": 2562,
    "maxScore": 32,
    "minScore": 13,
    "score": 21.7625,
    "start": 1922,
    "summary": true,
  },
]
`;

exports[`loads fixedstep bigwig with starts 1`] = `[]`;

exports[`loads fixedstep bigwig with starts 2`] = `
[
  {
    "end": 11492,
    "score": 0.47099998593330383,
    "start": 11489,
  },
  {
    "end": 11495,
    "score": 5.14900016784668,
    "start": 11492,
  },
  {
    "end": 11498,
    "score": -3.75600004196167,
    "start": 11495,
  },
  {
    "end": 11501,
    "score": 10.48900032043457,
    "start": 11498,
  },
  {
    "end": 11504,
    "score": 1.0709999799728394,
    "start": 11501,
  },
  {
    "end": 11507,
    "score": -13.446999549865723,
    "start": 11504,
  },
  {
    "end": 11510,
    "score": -6.321000099182129,
    "start": 11507,
  },
  {
    "end": 11513,
    "score": 4.25600004196167,
    "start": 11510,
  },
  {
    "end": 11516,
    "score": -1.784999966621399,
    "start": 11513,
  },
  {
    "end": 11519,
    "score": -10.321000099182129,
    "start": 11516,
  },
  {
    "end": 11522,
    "score": 0.42800000309944153,
    "start": 11519,
  },
  {
    "end": 11525,
    "score": -7.659999847412109,
    "start": 11522,
  },
  {
    "end": 11528,
    "score": 1.9010000228881836,
    "start": 11525,
  },
  {
    "end": 11531,
    "score": -11.713000297546387,
    "start": 11528,
  },
  {
    "end": 11534,
    "score": -10.855999946594238,
    "start": 11531,
  },
  {
    "end": 11537,
    "score": -6.170000076293945,
    "start": 11534,
  },
  {
    "end": 11540,
    "score": -2.931999921798706,
    "start": 11537,
  },
  {
    "end": 11549,
    "score": -15.66100025177002,
    "start": 11546,
  },
  {
    "end": 11552,
    "score": -1.6109999418258667,
    "start": 11549,
  },
  {
    "end": 11555,
    "score": -7.783999919891357,
    "start": 11552,
  },
  {
    "end": 11558,
    "score": -0.9760000109672546,
    "start": 11555,
  },
  {
    "end": 11561,
    "score": -2.2209999561309814,
    "start": 11558,
  },
  {
    "end": 11564,
    "score": -5.117000102996826,
    "start": 11561,
  },
  {
    "end": 11567,
    "score": -15.664999961853027,
    "start": 11564,
  },
  {
    "end": 11570,
    "score": -3.4189999103546143,
    "start": 11567,
  },
  {
    "end": 11573,
    "score": -8.244999885559082,
    "start": 11570,
  },
  {
    "end": 11576,
    "score": -1.7350000143051147,
    "start": 11573,
  },
  {
    "end": 11579,
    "score": 0.08799999952316284,
    "start": 11576,
  },
  {
    "end": 11582,
    "score": -7.298999786376953,
    "start": 11579,
  },
  {
    "end": 11585,
    "score": -8.192000389099121,
    "start": 11582,
  },
  {
    "end": 11588,
    "score": 1.7359999418258667,
    "start": 11585,
  },
  {
    "end": 11591,
    "score": 3.9000000953674316,
    "start": 11588,
  },
  {
    "end": 11594,
    "score": -15.710000038146973,
    "start": 11591,
  },
  {
    "end": 11597,
    "score": -8.050000190734863,
    "start": 11594,
  },
  {
    "end": 11600,
    "score": -8.753999710083008,
    "start": 11597,
  },
  {
    "end": 11603,
    "score": -0.5989999771118164,
    "start": 11600,
  },
  {
    "end": 11606,
    "score": -0.9769999980926514,
    "start": 11603,
  },
  {
    "end": 11609,
    "score": -0.5360000133514404,
    "start": 11606,
  },
  {
    "end": 11615,
    "score": -15.128000259399414,
    "start": 11612,
  },
  {
    "end": 11621,
    "score": -1.4800000190734863,
    "start": 11618,
  },
  {
    "end": 11624,
    "score": -1.2330000400543213,
    "start": 11621,
  },
  {
    "end": 11627,
    "score": -1.965000033378601,
    "start": 11624,
  },
  {
    "end": 11630,
    "score": 3.3489999771118164,
    "start": 11627,
  },
  {
    "end": 11633,
    "score": 0.42500001192092896,
    "start": 11630,
  },
  {
    "end": 11636,
    "score": -7.388000011444092,
    "start": 11633,
  },
  {
    "end": 11639,
    "score": -2.8320000171661377,
    "start": 11636,
  },
  {
    "end": 11642,
    "score": -13.104999542236328,
    "start": 11639,
  },
  {
    "end": 11645,
    "score": -9.470000267028809,
    "start": 11642,
  },
  {
    "end": 11648,
    "score": -9.57800006866455,
    "start": 11645,
  },
  {
    "end": 11651,
    "score": -7.874000072479248,
    "start": 11648,
  },
  {
    "end": 11654,
    "score": 2.7139999866485596,
    "start": 11651,
  },
  {
    "end": 11657,
    "score": -7.882999897003174,
    "start": 11654,
  },
  {
    "end": 11660,
    "score": 3.260999917984009,
    "start": 11657,
  },
  {
    "end": 11663,
    "score": 7.431000232696533,
    "start": 11660,
  },
  {
    "end": 11666,
    "score": -9.64900016784668,
    "start": 11663,
  },
  {
    "end": 11669,
    "score": -4.630000114440918,
    "start": 11666,
  },
  {
    "end": 11672,
    "score": -3.0339999198913574,
    "start": 11669,
  },
  {
    "end": 11675,
    "score": -12.366999626159668,
    "start": 11672,
  },
  {
    "end": 11678,
    "score": -5.486999988555908,
    "start": 11675,
  },
  {
    "end": 11681,
    "score": -5.177999973297119,
    "start": 11678,
  },
  {
    "end": 11684,
    "score": 0.49300000071525574,
    "start": 11681,
  },
  {
    "end": 11687,
    "score": -9.322999954223633,
    "start": 11684,
  },
  {
    "end": 11690,
    "score": -6.815000057220459,
    "start": 11687,
  },
  {
    "end": 11693,
    "score": -16.371999740600586,
    "start": 11690,
  },
  {
    "end": 11696,
    "score": -16.211000442504883,
    "start": 11693,
  },
  {
    "end": 11699,
    "score": -15.335000038146973,
    "start": 11696,
  },
  {
    "end": 11702,
    "score": -9.621000289916992,
    "start": 11699,
  },
  {
    "end": 11705,
    "score": -6.48799991607666,
    "start": 11702,
  },
  {
    "end": 11708,
    "score": 2.8429999351501465,
    "start": 11705,
  },
  {
    "end": 11711,
    "score": 0.42800000309944153,
    "start": 11708,
  },
  {
    "end": 11714,
    "score": -8.057999610900879,
    "start": 11711,
  },
  {
    "end": 11717,
    "score": -1.440999984741211,
    "start": 11714,
  },
  {
    "end": 11720,
    "score": 2.8310000896453857,
    "start": 11717,
  },
  {
    "end": 11723,
    "score": 3.864000082015991,
    "start": 11720,
  },
  {
    "end": 11732,
    "score": -3.8559999465942383,
    "start": 11729,
  },
  {
    "end": 11735,
    "score": -14.99899959564209,
    "start": 11732,
  },
  {
    "end": 11738,
    "score": 3.2890000343322754,
    "start": 11735,
  },
  {
    "end": 11741,
    "score": -16.163999557495117,
    "start": 11738,
  },
  {
    "end": 11744,
    "score": -3.5999999046325684,
    "start": 11741,
  },
  {
    "end": 11747,
    "score": -1.621999979019165,
    "start": 11744,
  },
  {
    "end": 11750,
    "score": -3.187000036239624,
    "start": 11747,
  },
  {
    "end": 11753,
    "score": -0.5019999742507935,
    "start": 11750,
  },
  {
    "end": 11756,
    "score": 3.002000093460083,
    "start": 11753,
  },
  {
    "end": 11759,
    "score": 2.8320000171661377,
    "start": 11756,
  },
  {
    "end": 11762,
    "score": -1.378000020980835,
    "start": 11759,
  },
  {
    "end": 11765,
    "score": -1.5640000104904175,
    "start": 11762,
  },
  {
    "end": 11768,
    "score": -3.444999933242798,
    "start": 11765,
  },
  {
    "end": 11771,
    "score": -12.366999626159668,
    "start": 11768,
  },
  {
    "end": 11774,
    "score": 2.6730000972747803,
    "start": 11771,
  },
  {
    "end": 11777,
    "score": -9.229999542236328,
    "start": 11774,
  },
  {
    "end": 11780,
    "score": 12.592000007629395,
    "start": 11777,
  },
  {
    "end": 11783,
    "score": -11.852999687194824,
    "start": 11780,
  },
  {
    "end": 11786,
    "score": -1.1749999523162842,
    "start": 11783,
  },
  {
    "end": 11789,
    "score": -3.128999948501587,
    "start": 11786,
  },
  {
    "end": 11792,
    "score": 3.6630001068115234,
    "start": 11789,
  },
  {
    "end": 11795,
    "score": -11.982000350952148,
    "start": 11792,
  },
  {
    "end": 11798,
    "score": -14.75,
    "start": 11795,
  },
  {
    "end": 11801,
    "score": 0.5600000023841858,
    "start": 11798,
  },
  {
    "end": 11804,
    "score": -3.124000072479248,
    "start": 11801,
  },
  {
    "end": 11807,
    "score": 2.249000072479248,
    "start": 11804,
  },
  {
    "end": 11810,
    "score": -3.8889999389648438,
    "start": 11807,
  },
  {
    "end": 11813,
    "score": -5.505000114440918,
    "start": 11810,
  },
  {
    "end": 11816,
    "score": -9.392999649047852,
    "start": 11813,
  },
  {
    "end": 11819,
    "score": 14.244000434875488,
    "start": 11816,
  },
  {
    "end": 11822,
    "score": -3.177999973297119,
    "start": 11819,
  },
  {
    "end": 11825,
    "score": -19.1560001373291,
    "start": 11822,
  },
  {
    "end": 11828,
    "score": -3.7190001010894775,
    "start": 11825,
  },
  {
    "end": 11831,
    "score": -3.688999891281128,
    "start": 11828,
  },
  {
    "end": 11834,
    "score": -8.920999526977539,
    "start": 11831,
  },
  {
    "end": 11837,
    "score": 7.686999797821045,
    "start": 11834,
  },
  {
    "end": 11840,
    "score": 2.7060000896453857,
    "start": 11837,
  },
  {
    "end": 11843,
    "score": -3.7130000591278076,
    "start": 11840,
  },
  {
    "end": 11846,
    "score": -12.866999626159668,
    "start": 11843,
  },
  {
    "end": 11849,
    "score": 5.748000144958496,
    "start": 11846,
  },
  {
    "end": 11852,
    "score": -8.998000144958496,
    "start": 11849,
  },
  {
    "end": 11855,
    "score": -2.058000087738037,
    "start": 11852,
  },
  {
    "end": 11858,
    "score": -7.059000015258789,
    "start": 11855,
  },
  {
    "end": 11861,
    "score": 1.003999948501587,
    "start": 11858,
  },
  {
    "end": 11864,
    "score": -5.2230000495910645,
    "start": 11861,
  },
  {
    "end": 11867,
    "score": 2.5820000171661377,
    "start": 11864,
  },
  {
    "end": 11870,
    "score": -7.480999946594238,
    "start": 11867,
  },
  {
    "end": 11873,
    "score": -15.852999687194824,
    "start": 11870,
  },
  {
    "end": 11876,
    "score": -8.194000244140625,
    "start": 11873,
  },
  {
    "end": 11879,
    "score": -0.1720000058412552,
    "start": 11876,
  },
  {
    "end": 11882,
    "score": -6.638000011444092,
    "start": 11879,
  },
  {
    "end": 11885,
    "score": -2.2990000247955322,
    "start": 11882,
  },
  {
    "end": 11888,
    "score": -8.72700023651123,
    "start": 11885,
  },
  {
    "end": 11891,
    "score": -10.718000411987305,
    "start": 11888,
  },
  {
    "end": 11894,
    "score": -8.227999687194824,
    "start": 11891,
  },
  {
    "end": 11897,
    "score": -2.0989999771118164,
    "start": 11894,
  },
  {
    "end": 11900,
    "score": 0.2639999985694885,
    "start": 11897,
  },
  {
    "end": 11903,
    "score": -10.418000221252441,
    "start": 11900,
  },
  {
    "end": 11906,
    "score": -10.383000373840332,
    "start": 11903,
  },
  {
    "end": 11909,
    "score": 3.614000082015991,
    "start": 11906,
  },
  {
    "end": 11912,
    "score": 6.59499979019165,
    "start": 11909,
  },
  {
    "end": 11915,
    "score": -2.490000009536743,
    "start": 11912,
  },
  {
    "end": 11918,
    "score": -17.437999725341797,
    "start": 11915,
  },
  {
    "end": 11921,
    "score": -11.024999618530273,
    "start": 11918,
  },
  {
    "end": 11924,
    "score": -10.916000366210938,
    "start": 11921,
  },
  {
    "end": 11927,
    "score": 3.3550000190734863,
    "start": 11924,
  },
  {
    "end": 11930,
    "score": -4.974999904632568,
    "start": 11927,
  },
  {
    "end": 11933,
    "score": -3.9010000228881836,
    "start": 11930,
  },
  {
    "end": 11936,
    "score": -4.066999912261963,
    "start": 11933,
  },
  {
    "end": 11939,
    "score": 3.569999933242798,
    "start": 11936,
  },
  {
    "end": 11942,
    "score": -1.9670000076293945,
    "start": 11939,
  },
  {
    "end": 11945,
    "score": -7.986000061035156,
    "start": 11942,
  },
  {
    "end": 11948,
    "score": -14.076000213623047,
    "start": 11945,
  },
  {
    "end": 11951,
    "score": -1.2489999532699585,
    "start": 11948,
  },
  {
    "end": 11954,
    "score": -8.175000190734863,
    "start": 11951,
  },
  {
    "end": 11957,
    "score": -2.615000009536743,
    "start": 11954,
  },
  {
    "end": 11960,
    "score": -4.669000148773193,
    "start": 11957,
  },
  {
    "end": 11963,
    "score": -10.083999633789062,
    "start": 11960,
  },
  {
    "end": 11966,
    "score": -5.091000080108643,
    "start": 11963,
  },
  {
    "end": 11969,
    "score": 3.4609999656677246,
    "start": 11966,
  },
  {
    "end": 11972,
    "score": -6.998000144958496,
    "start": 11969,
  },
  {
    "end": 11975,
    "score": -12.909000396728516,
    "start": 11972,
  },
  {
    "end": 11978,
    "score": -2.484999895095825,
    "start": 11975,
  },
  {
    "end": 11981,
    "score": -6.860000133514404,
    "start": 11978,
  },
  {
    "end": 11984,
    "score": -4.9770002365112305,
    "start": 11981,
  },
  {
    "end": 11987,
    "score": 3.3550000190734863,
    "start": 11984,
  },
  {
    "end": 11990,
    "score": 2.694999933242798,
    "start": 11987,
  },
  {
    "end": 11993,
    "score": 8.197999954223633,
    "start": 11990,
  },
  {
    "end": 11996,
    "score": -10.647000312805176,
    "start": 11993,
  },
]
`;

exports[`loads simple fixedstep bigwig 1`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 2`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 3`] = `
[
  {
    "end": 100,
    "score": 281,
    "start": 0,
  },
  {
    "end": 200,
    "score": 183,
    "start": 100,
  },
  {
    "end": 300,
    "score": 213,
    "start": 200,
  },
  {
    "end": 400,
    "score": 191,
    "start": 300,
  },
  {
    "end": 500,
    "score": 288,
    "start": 400,
  },
  {
    "end": 600,
    "score": 184,
    "start": 500,
  },
  {
    "end": 700,
    "score": 258,
    "start": 600,
  },
  {
    "end": 800,
    "score": 173,
    "start": 700,
  },
  {
    "end": 900,
    "score": 274,
    "start": 800,
  },
  {
    "end": 1000,
    "score": 292,
    "start": 900,
  },
]
`;

exports[`loads simple fixedstep bigwig 4`] = `
[
  {
    "end": 2000,
    "score": 192,
    "start": 1900,
  },
  {
    "end": 2100,
    "score": 114,
    "start": 2000,
  },
]
`;

exports[`loads variable step bigwig 1`] = `
[
  {
    "end": 12,
    "score": 0.7819849848747253,
    "start": 11,
  },
  {
    "end": 16,
    "score": 0.8109930157661438,
    "start": 15,
  },
  {
    "end": 20,
    "score": 0.7696009874343872,
    "start": 19,
  },
  {
    "end": 24,
    "score": 0.733830988407135,
    "start": 23,
  },
  {
    "end": 28,
    "score": 0.7320680022239685,
    "start": 27,
  },
  {
    "end": 32,
    "score": 0.5884150266647339,
    "start": 31,
  },
  {
    "end": 36,
    "score": 0.5306519865989685,
    "start": 35,
  },
  {
    "end": 40,
    "score": 0.36328500509262085,
    "start": 39,
  },
  {
    "end": 44,
    "score": 0.1721539944410324,
    "start": 43,
  },
  {
    "end": 48,
    "score": 0.06392999738454819,
    "start": 47,
  },
]
`;

exports[`missing data 1`] = `
[
  {
    "end": 4210,
    "score": 20,
    "start": 4209,
  },
  {
    "end": 4211,
    "score": 20,
    "start": 4210,
  },
  {
    "end": 4212,
    "score": 20,
    "start": 4211,
  },
  {
    "end": 4213,
    "score": 21,
    "start": 4212,
  },
  {
    "end": 4214,
    "score": 21,
    "start": 4213,
  },
  {
    "end": 4215,
    "score": 21,
    "start": 4214,
  },
  {
    "end": 4216,
    "score": 22,
    "start": 4215,
  },
  {
    "end": 4217,
    "score": 22,
    "start": 4216,
  },
  {
    "end": 4218,
    "score": 22,
    "start": 4217,
  },
  {
    "end": 4219,
    "score": 21,
    "start": 4218,
  },
]
`;

exports[`missing data 2`] = `
[
  {
    "end": 5200,
    "score": 19,
    "start": 5199,
  },
  {
    "end": 5201,
    "score": 19,
    "start": 5200,
  },
  {
    "end": 5202,
    "score": 19,
    "start": 5201,
  },
  {
    "end": 5203,
    "score": 20,
    "start": 5202,
  },
  {
    "end": 5204,
    "score": 19,
    "start": 5203,
  },
  {
    "end": 5205,
    "score": 18,
    "start": 5204,
  },
  {
    "end": 5206,
    "score": 18,
    "start": 5205,
  },
  {
    "end": 5207,
    "score": 19,
    "start": 5206,
  },
  {
    "end": 5208,
    "score": 18,
    "start": 5207,
  },
  {
    "end": 5209,
    "score": 18,
    "start": 5208,
  },
]
`;

exports[`should load a lot of summary data 1`] = `
[
  {
    "end": 86144,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 0,
    "summary": true,
  },
  {
    "end": 172288,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 86144,
    "summary": true,
  },
  {
    "end": 258432,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 172288,
    "summary": true,
  },
  {
    "end": 344576,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 258432,
    "summary": true,
  },
  {
    "end": 430720,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 344576,
    "summary": true,
  },
  {
    "end": 516864,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 430720,
    "summary": true,
  },
  {
    "end": 603008,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 516864,
    "summary": true,
  },
  {
    "end": 689152,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 603008,
    "summary": true,
  },
  {
    "end": 775296,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 689152,
    "summary": true,
  },
  {
    "end": 861440,
    "maxScore": 0,
    "minScore": 0,
    "score": 0,
    "start": 775296,
    "summary": true,
  },
]
`;

exports[`should load a lot of summary data 2`] = `
[
  {
    "end": 50480384,
    "maxScore": 19.640100479125977,
    "minScore": 0,
    "score": 0.09248444591122575,
    "start": 50394240,
    "summary": true,
  },
  {
    "end": 50566528,
    "maxScore": 29.029600143432617,
    "minScore": 0,
    "score": 0.3248449502196365,
    "start": 50480384,
    "summary": true,
  },
  {
    "end": 50652672,
    "maxScore": 44.189998626708984,
    "minScore": 0,
    "score": 1.4510407430813634,
    "start": 50566528,
    "summary": true,
  },
  {
    "end": 50738816,
    "maxScore": 71.71600341796875,
    "minScore": 0,
    "score": 2.0017577412787166,
    "start": 50652672,
    "summary": true,
  },
  {
    "end": 50824960,
    "maxScore": 68.74019622802734,
    "minScore": 0,
    "score": 1.156110973070188,
    "start": 50738816,
    "summary": true,
  },
  {
    "end": 50911104,
    "maxScore": 34.37009811401367,
    "minScore": 0,
    "score": 1.481282179458206,
    "start": 50824960,
    "summary": true,
  },
  {
    "end": 50997248,
    "maxScore": 70.96739959716797,
    "minScore": 0,
    "score": 1.4128606966790562,
    "start": 50911104,
    "summary": true,
  },
  {
    "end": 51083392,
    "maxScore": 41.391300201416016,
    "minScore": 0,
    "score": 0.7212576265548543,
    "start": 50997248,
    "summary": true,
  },
  {
    "end": 51169536,
    "maxScore": 9.819890022277832,
    "minScore": 0,
    "score": 0.20769502693705816,
    "start": 51083392,
    "summary": true,
  },
  {
    "end": 51255680,
    "maxScore": 24.54990005493164,
    "minScore": 0,
    "score": 0.0633376828883356,
    "start": 51169536,
    "summary": true,
  },
]
`;

exports[`sorted names 1`] = `
[
  {
    "end": 33117,
    "score": 86,
    "start": 32188,
  },
  {
    "end": 96507,
    "score": 106,
    "start": 95819,
  },
  {
    "end": 113500,
    "score": 101,
    "start": 112760,
  },
  {
    "end": 137804,
    "score": 98,
    "start": 137115,
  },
  {
    "end": 146479,
    "score": 110,
    "start": 145791,
  },
  {
    "end": 168233,
    "score": 101,
    "start": 167417,
  },
  {
    "end": 222798,
    "score": 120,
    "start": 222110,
  },
  {
    "end": 236088,
    "score": 112,
    "start": 235400,
  },
  {
    "end": 248514,
    "score": 110,
    "start": 247821,
  },
  {
    "end": 266445,
    "score": 85,
    "start": 265757,
  },
  {
    "end": 280029,
    "score": 117,
    "start": 279341,
  },
  {
    "end": 285081,
    "score": 93,
    "start": 284393,
  },
  {
    "end": 386501,
    "score": 81,
    "start": 385771,
  },
  {
    "end": 420182,
    "score": 82,
    "start": 419494,
  },
  {
    "end": 427830,
    "score": 98,
    "start": 427142,
  },
  {
    "end": 525796,
    "score": 87,
    "start": 525108,
  },
  {
    "end": 536087,
    "score": 90,
    "start": 535213,
  },
  {
    "end": 552779,
    "score": 98,
    "start": 552091,
  },
  {
    "end": 594037,
    "score": 107,
    "start": 592813,
  },
  {
    "end": 657749,
    "score": 95,
    "start": 657061,
  },
  {
    "end": 735702,
    "score": 119,
    "start": 735014,
  },
  {
    "end": 751612,
    "score": 106,
    "start": 750924,
  },
  {
    "end": 766621,
    "score": 90,
    "start": 765778,
  },
  {
    "end": 817705,
    "score": 100,
    "start": 816713,
  },
]
`;

exports[`test uncompressed bw (-unc from wigToBigWig) 1`] = `
[
  {
    "end": 40000,
    "score": 23,
    "start": 39999,
  },
  {
    "end": 40001,
    "score": 23,
    "start": 40000,
  },
  {
    "end": 40002,
    "score": 23,
    "start": 40001,
  },
  {
    "end": 40003,
    "score": 23,
    "start": 40002,
  },
  {
    "end": 40004,
    "score": 25,
    "start": 40003,
  },
  {
    "end": 40005,
    "score": 25,
    "start": 40004,
  },
  {
    "end": 40006,
    "score": 24,
    "start": 40005,
  },
  {
    "end": 40007,
    "score": 23,
    "start": 40006,
  },
  {
    "end": 40008,
    "score": 22,
    "start": 40007,
  },
  {
    "end": 40009,
    "score": 22,
    "start": 40008,
  },
]
`;
